--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="grid">
             <h2 class="restaurants__title">Restaurants</h2>
             <div class="restaurants__wrap">
-                <a class="card" href="./restaurants/menu1.html">
+                <a class="card" href="./restaurants/la_palette.html">
                     <img class="card__img" src="./assets/images/restaurants/palette-mini.jpg" alt="plat d'une restaurant">
                     <span class="card__nouveau">Nouveau</span>
                     <h3 class="card__title">La palette du goût</h3>
@@ -105,7 +105,7 @@
                     </label> -->
                     <span class="card__icon"></span>
                 </a> 
-                <a class="card" href="./restaurants/menu2.html">
+                <a class="card" href="./restaurants/la_note.html">
                     <img class="card__img" src="./assets/images/restaurants/note-mini.jpg" alt="plat d'une restaurant">
                     <span class="card__nouveau">Nouveau</span>
                     <h3 class="card__title">La note enchantée</h3>
@@ -118,7 +118,7 @@
                     </label> -->
                     <span class="card__icon"></span>
                 </a>
-                <a class="card" href="./restaurants/menu3.html">
+                <a class="card" href="./restaurants/la_francaise.html">
                     <img class="card__img" src="./assets/images/restaurants/francaise-mini.jpg" alt="plat d'une restaurant">
                     <h3 class="card__title">À la française</h3>
                     <p class="card__subtitle">Cité Rouge</p>
@@ -130,7 +130,7 @@
                     </label> -->
                     <span class="card__icon"></span>
                 </a>
-                <a class="card" href="./restaurants/menu4.html">
+                <a class="card" href="./restaurants/le_delice.html">
                    <img class="card__img" src="./assets/images/restaurants/delice-mini.jpg" alt="plat d'une restaurant">
                     <h3 class="card__title">Le délice des sens</h3>
                     <p class="card__subtitle">Folie-Méricourt</p>
