--- a/restaurants/la_francaise.html
+++ b/restaurants/la_francaise.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu - Le délice des sens</title>
+    <title>Menu - À la française</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="../assets/css/main.css">
 </head>
-<body>
+<body class="francaise_bg image">
 
         <!--***** Le Header *****-->
 
@@ -29,7 +29,7 @@
 
     <main class="menuWrapper">
         <div class="menuWrapper__title">
-            <h2 class="menuWrapper__title--titre">Le délice des sens</h2>
+            <h2 class="menuWrapper__title--titre">À la française</h2>
             <input class="checkbox" id="checkbox" type="checkbox">
             <label for="checkbox">
                 <svg class="menuWrapper__title--icon" viewBox="0 0 22 21" xmlns="http://www.w3.org/2000/svg">
@@ -47,8 +47,8 @@
             <article class="menuCard even">
                 <div class="menuCard__box">
                     <div class="menuCard__box--text">
-                        <h4>Tartare de thon</h4>
-                        <p>Assaisonné au yuzu</p>
+                        <h4>Tartare de poulpe acidulé</h4>
+                        <p>Aux zestes d'orange</p>
                     </div>
                     <div class="menuCard__box--price">25€</div>
                 </div>
@@ -59,8 +59,8 @@
             <article class="menuCard uneven">
                 <div class="menuCard__box">
                     <div class="menuCard__box--text">
-                        <h4>Bouchée de homard croustillant</h4>
-                        <p>Et sa farandole de petits légumes</p>
+                        <h4>Velouté de légumes d'antan</h4>
+                        <p>Carotte, panais, topinambour</p>
                     </div>
                     <div class="menuCard__box--price">35€</div>
                 </div>
@@ -71,8 +71,8 @@
             <article class="menuCard even">
                 <div class="menuCard__box">
                     <div class="menuCard__box--text">
-                        <h4>Velouté de cèpes</h4>
-                        <p>Aux truffes</p>
+                        <h4>Soupe à l'oignon</h4>
+                        <p>Revisitée</p>
                     </div>
                     <div class="menuCard__box--price">20€</div>
                 </div>
@@ -88,8 +88,8 @@
             <article class="menuCard uneven">
                 <div class="menuCard__box">
                     <div class="menuCard__box--text">
-                        <h4>Poulet rôti aux herbes de Provence</h4>
-                        <p>Et sa crème de truffe</p>
+                        <h4>Coquilles Saint-Jacques</h4>
+                        <p>Accompagnées d'une purée de panais</p>
                     </div>
                     <div class="menuCard__box--price">40€</div>
                 </div>
@@ -100,8 +100,8 @@
             <article class="menuCard even">
                 <div class="menuCard__box">
                     <div class="menuCard__box--text">
-                        <h4>Langouste rôtie</h4>
-                        <p>Et ses légumes de saison</p>
+                        <h4>Magret de canard</h4>
+                        <p>Et parmentier de pommes de terre</p>
                     </div>
                     <div class="menuCard__box--price">35€</div>
                 </div>
@@ -112,8 +112,8 @@
             <article class="menuCard uneven">
                 <div class="menuCard__box">
                     <div class="menuCard__box--text">
-                        <h4>Côte de bœuf Angus</h4>
-                        <p>Et sa purée de panais</p>
+                        <h4>Pigeonneau d’Ille-et-Vilaine</h4>
+                        <p>Sur son lit de gnocchis aux légumes</p>
                     </div>
                     <div class="menuCard__box--price">44€</div>
                 </div>
@@ -129,8 +129,8 @@
             <article class="menuCard even">
                 <div class="menuCard__box">
                     <div class="menuCard__box--text">
-                        <h4>Farandole de desserts</h4>
-                        <p>Du chef</p>
+                        <h4>Pétales de violettes glacés</h4>
+                        <p>Et purée de noisettes</p>
                     </div>
                     <div class="menuCard__box--price">18€</div>
                 </div>
@@ -141,8 +141,8 @@
             <article class="menuCard uneven">
                 <div class="menuCard__box">
                     <div class="menuCard__box--text">
-                        <h4>Crème brulée</h4>
-                        <p>Revisitée</p>
+                        <h4>Fondant au chocolat</h4>
+                        <p>Revisité</p>
                     </div>
                     <div class="menuCard__box--price">22€</div>
                 </div>
@@ -153,8 +153,8 @@
             <article class="menuCard even">
                 <div class="menuCard__box">
                     <div class="menuCard__box--text">
-                        <h4>Tiramisu</h4>
-                        <p>À la noisette</p>
+                        <h4>Millefeuille croustillant</h4>
+                        <p>Myrtilles et pâte d’amande</p>
                     </div>
                     <div class="menuCard__box--price">23€</div>
                 </div>
@@ -165,7 +165,7 @@
             
 
         </div>
-        <a class="btn__commander" href="./merci.html">Commander</a>
+        <a class="btn__commander" href="./confirmation.html">Commander</a>
         <footer class="footer">
             <div class="grid">
                 <h4 class="footer__title">ohmyfood</h4>
@@ -187,6 +187,5 @@
         </footer>
     </main>  
     <div class="background"></div>
-    <div class="image3"></div>
 </body>
 </html>
