--- a/restaurants/la_note.html
+++ b/restaurants/la_note.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu - À la française</title>
+    <title>Menu - La note enchantée</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="../assets/css/main.css">
 </head>
-<body>
+<body class="note_bg image">
 
         <!--***** Le Header *****-->
 
@@ -29,7 +29,7 @@
 
     <main class="menuWrapper">
         <div class="menuWrapper__title">
-            <h2 class="menuWrapper__title--titre">À la française</h2>
+            <h2 class="menuWrapper__title--titre">La note enchantée</h2>
             <input class="checkbox" id="checkbox" type="checkbox">
             <label for="checkbox">
                 <svg class="menuWrapper__title--icon" viewBox="0 0 22 21" xmlns="http://www.w3.org/2000/svg">
@@ -47,8 +47,8 @@
             <article class="menuCard even">
                 <div class="menuCard__box">
                     <div class="menuCard__box--text">
-                        <h4>Tartare de poulpe acidulé</h4>
-                        <p>Aux zestes d'orange</p>
+                        <h4>Ravioles de foie gras</h4>
+                        <p>Accompagnées de leur crème à la truffe</p>
                     </div>
                     <div class="menuCard__box--price">25€</div>
                 </div>
@@ -59,8 +59,8 @@
             <article class="menuCard uneven">
                 <div class="menuCard__box">
                     <div class="menuCard__box--text">
-                        <h4>Velouté de légumes d'antan</h4>
-                        <p>Carotte, panais, topinambour</p>
+                        <h4>Caviar osciètre</h4>
+                        <p>Sur blini à la farine de blé noir</p>
                     </div>
                     <div class="menuCard__box--price">35€</div>
                 </div>
@@ -71,10 +71,22 @@
             <article class="menuCard even">
                 <div class="menuCard__box">
                     <div class="menuCard__box--text">
-                        <h4>Soupe à l'oignon</h4>
-                        <p>Revisitée</p>
+                        <h4>Homard et espuma de potiron</h4>
+                        <p>Marinés aux zestes d'orange</p>
                     </div>
                     <div class="menuCard__box--price">20€</div>
+                </div>
+                <div class="menuCard__selectBtn">
+                    <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
+                </div>
+            </article>
+            <article class="menuCard uneven">
+                <div class="menuCard__box">
+                    <div class="menuCard__box--text">
+                        <h4>Foie gras de canard cuit entier</h4>
+                        <p>Confiture de figue et pain toasté</p>
+                    </div>
+                    <div class="menuCard__box--price">35€</div>
                 </div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
@@ -85,13 +97,25 @@
         </div>
         <div class="menuWrapper__box">
             <h3 class="menuWrapper__box--title">Plats<span class="menuWrapper__box--borderLeft"></span></h3>
+            <article class="menuCard even">
+                <div class="menuCard__box">
+                    <div class="menuCard__box--text">
+                        <h4>Noix de coquilles Saint-Jacques</h4>
+                        <p>Sur lit de purée de céleri-rave</p>
+                    </div>
+                    <div class="menuCard__box--price">40€</div>
+                </div>
+                <div class="menuCard__selectBtn">
+                    <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
+                </div>
+            </article>
             <article class="menuCard uneven">
                 <div class="menuCard__box">
                     <div class="menuCard__box--text">
-                        <h4>Coquilles Saint-Jacques</h4>
-                        <p>Accompagnées d'une purée de panais</p>
+                        <h4>Langoustine poêlée</h4>
+                        <p>Purée de patate douce</p>
                     </div>
-                    <div class="menuCard__box--price">40€</div>
+                    <div class="menuCard__box--price">35€</div>
                 </div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
@@ -100,20 +124,8 @@
             <article class="menuCard even">
                 <div class="menuCard__box">
                     <div class="menuCard__box--text">
-                        <h4>Magret de canard</h4>
-                        <p>Et parmentier de pommes de terre</p>
-                    </div>
-                    <div class="menuCard__box--price">35€</div>
-                </div>
-                <div class="menuCard__selectBtn">
-                    <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
-                </div>
-            </article>
-            <article class="menuCard uneven">
-                <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Pigeonneau d’Ille-et-Vilaine</h4>
-                        <p>Sur son lit de gnocchis aux légumes</p>
+                        <h4>Mijoté de queue de bœuf</h4>
+                        <p>Et riz sauvage aux zestes de citron</p>
                     </div>
                     <div class="menuCard__box--price">44€</div>
                 </div>
@@ -126,13 +138,25 @@
         </div>
         <div class="menuWrapper__box">
             <h3 class="menuWrapper__box--title">Desserts<span class="menuWrapper__box--borderLeft"></span></h3>
+            <article class="menuCard uneven">
+                <div class="menuCard__box">
+                    <div class="menuCard__box--text">
+                        <h4>Macaron noisette et chocolat</h4>
+                        <p>Glace au caramel brun et sel de Guérande</p>
+                    </div>
+                    <div class="menuCard__box--price">18€</div>
+                </div>
+                <div class="menuCard__selectBtn">
+                    <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
+                </div>
+            </article>
             <article class="menuCard even">
                 <div class="menuCard__box">
                     <div class="menuCard__box--text">
-                        <h4>Pétales de violettes glacés</h4>
-                        <p>Et purée de noisettes</p>
+                        <h4>Baba au rhum revisité</h4>
+                        <p>Avec son coulis de citron</p>
                     </div>
-                    <div class="menuCard__box--price">18€</div>
+                    <div class="menuCard__box--price">22€</div>
                 </div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
@@ -141,20 +165,8 @@
             <article class="menuCard uneven">
                 <div class="menuCard__box">
                     <div class="menuCard__box--text">
-                        <h4>Fondant au chocolat</h4>
-                        <p>Revisité</p>
-                    </div>
-                    <div class="menuCard__box--price">22€</div>
-                </div>
-                <div class="menuCard__selectBtn">
-                    <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
-                </div>
-            </article>
-            <article class="menuCard even">
-                <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Millefeuille croustillant</h4>
-                        <p>Myrtilles et pâte d’amande</p>
+                        <h4>Tarte au citron meringuée</h4>
+                        <p>Déstructurée</p>
                     </div>
                     <div class="menuCard__box--price">23€</div>
                 </div>
@@ -165,7 +177,7 @@
             
 
         </div>
-        <a class="btn__commander" href="./merci.html">Commander</a>
+        <a class="btn__commander" href="./confirmation.html">Commander</a>
         <footer class="footer">
             <div class="grid">
                 <h4 class="footer__title">ohmyfood</h4>
@@ -187,6 +199,5 @@
         </footer>
     </main>  
     <div class="background"></div>
-    <div class="image2"></div>
 </body>
 </html>
