--- a/restaurants/la_palette.html
+++ b/restaurants/la_palette.html
@@ -13,7 +13,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="../assets/css/main.css">
 </head>
-<body>
+<body class="palette_bg image">
 
         <!--***** Le Header *****-->
 
@@ -165,7 +165,7 @@
             
 
         </div>
-        <a class="btn__commander" href="./merci.html">Commander</a>
+        <a class="btn__commander" href="./confirmation.html">Commander</a>
         <footer class="footer">
             <div class="grid">
                 <h4 class="footer__title">ohmyfood</h4>
@@ -187,6 +187,5 @@
         </footer>
     </main>  
     <div class="background"></div>
-    <div class="image"></div>
 </body>
 </html>
