--- a/restaurants/le_delice.html
+++ b/restaurants/le_delice.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu - La note enchantée</title>
+    <title>Menu - Le délice des sens</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="../assets/css/main.css">
 </head>
-<body>
+<body class="delice_bg image">
 
         <!--***** Le Header *****-->
 
@@ -29,7 +29,7 @@
 
     <main class="menuWrapper">
         <div class="menuWrapper__title">
-            <h2 class="menuWrapper__title--titre">La note enchantée</h2>
+            <h2 class="menuWrapper__title--titre">Le délice des sens</h2>
             <input class="checkbox" id="checkbox" type="checkbox">
             <label for="checkbox">
                 <svg class="menuWrapper__title--icon" viewBox="0 0 22 21" xmlns="http://www.w3.org/2000/svg">
@@ -47,8 +47,8 @@
             <article class="menuCard even">
                 <div class="menuCard__box">
                     <div class="menuCard__box--text">
-                        <h4>Ravioles de foie gras</h4>
-                        <p>Accompagnées de leur crème à la truffe</p>
+                        <h4>Tartare de thon</h4>
+                        <p>Assaisonné au yuzu</p>
                     </div>
                     <div class="menuCard__box--price">25€</div>
                 </div>
@@ -59,8 +59,8 @@
             <article class="menuCard uneven">
                 <div class="menuCard__box">
                     <div class="menuCard__box--text">
-                        <h4>Caviar osciètre</h4>
-                        <p>Sur blini à la farine de blé noir</p>
+                        <h4>Bouchée de homard croustillant</h4>
+                        <p>Et sa farandole de petits légumes</p>
                     </div>
                     <div class="menuCard__box--price">35€</div>
                 </div>
@@ -71,22 +71,10 @@
             <article class="menuCard even">
                 <div class="menuCard__box">
                     <div class="menuCard__box--text">
-                        <h4>Homard et espuma de potiron</h4>
-                        <p>Marinés aux zestes d'orange</p>
+                        <h4>Velouté de cèpes</h4>
+                        <p>Aux truffes</p>
                     </div>
                     <div class="menuCard__box--price">20€</div>
-                </div>
-                <div class="menuCard__selectBtn">
-                    <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
-                </div>
-            </article>
-            <article class="menuCard uneven">
-                <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Foie gras de canard cuit entier</h4>
-                        <p>Confiture de figue et pain toasté</p>
-                    </div>
-                    <div class="menuCard__box--price">35€</div>
                 </div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
@@ -97,13 +85,25 @@
         </div>
         <div class="menuWrapper__box">
             <h3 class="menuWrapper__box--title">Plats<span class="menuWrapper__box--borderLeft"></span></h3>
+            <article class="menuCard uneven">
+                <div class="menuCard__box">
+                    <div class="menuCard__box--text">
+                        <h4>Poulet rôti aux herbes de Provence</h4>
+                        <p>Et sa crème de truffe</p>
+                    </div>
+                    <div class="menuCard__box--price">40€</div>
+                </div>
+                <div class="menuCard__selectBtn">
+                    <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
+                </div>
+            </article>
             <article class="menuCard even">
                 <div class="menuCard__box">
                     <div class="menuCard__box--text">
-                        <h4>Noix de coquilles Saint-Jacques</h4>
-                        <p>Sur lit de purée de céleri-rave</p>
+                        <h4>Langouste rôtie</h4>
+                        <p>Et ses légumes de saison</p>
                     </div>
-                    <div class="menuCard__box--price">40€</div>
+                    <div class="menuCard__box--price">35€</div>
                 </div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
@@ -112,20 +112,8 @@
             <article class="menuCard uneven">
                 <div class="menuCard__box">
                     <div class="menuCard__box--text">
-                        <h4>Langoustine poêlée</h4>
-                        <p>Purée de patate douce</p>
-                    </div>
-                    <div class="menuCard__box--price">35€</div>
-                </div>
-                <div class="menuCard__selectBtn">
-                    <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
-                </div>
-            </article>
-            <article class="menuCard even">
-                <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Mijoté de queue de bœuf</h4>
-                        <p>Et riz sauvage aux zestes de citron</p>
+                        <h4>Côte de bœuf Angus</h4>
+                        <p>Et sa purée de panais</p>
                     </div>
                     <div class="menuCard__box--price">44€</div>
                 </div>
@@ -138,13 +126,25 @@
         </div>
         <div class="menuWrapper__box">
             <h3 class="menuWrapper__box--title">Desserts<span class="menuWrapper__box--borderLeft"></span></h3>
+            <article class="menuCard even">
+                <div class="menuCard__box">
+                    <div class="menuCard__box--text">
+                        <h4>Farandole de desserts</h4>
+                        <p>Du chef</p>
+                    </div>
+                    <div class="menuCard__box--price">18€</div>
+                </div>
+                <div class="menuCard__selectBtn">
+                    <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
+                </div>
+            </article>
             <article class="menuCard uneven">
                 <div class="menuCard__box">
                     <div class="menuCard__box--text">
-                        <h4>Macaron noisette et chocolat</h4>
-                        <p>Glace au caramel brun et sel de Guérande</p>
+                        <h4>Crème brulée</h4>
+                        <p>Revisitée</p>
                     </div>
-                    <div class="menuCard__box--price">18€</div>
+                    <div class="menuCard__box--price">22€</div>
                 </div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
@@ -153,20 +153,8 @@
             <article class="menuCard even">
                 <div class="menuCard__box">
                     <div class="menuCard__box--text">
-                        <h4>Baba au rhum revisité</h4>
-                        <p>Avec son coulis de citron</p>
-                    </div>
-                    <div class="menuCard__box--price">22€</div>
-                </div>
-                <div class="menuCard__selectBtn">
-                    <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
-                </div>
-            </article>
-            <article class="menuCard uneven">
-                <div class="menuCard__box">
-                    <div class="menuCard__box--text">
-                        <h4>Tarte au citron meringuée</h4>
-                        <p>Déstructurée</p>
+                        <h4>Tiramisu</h4>
+                        <p>À la noisette</p>
                     </div>
                     <div class="menuCard__box--price">23€</div>
                 </div>
@@ -177,7 +165,7 @@
             
 
         </div>
-        <a class="btn__commander" href="./merci.html">Commander</a>
+        <a class="btn__commander" href="./confirmation.html">Commander</a>
         <footer class="footer">
             <div class="grid">
                 <h4 class="footer__title">ohmyfood</h4>
@@ -199,6 +187,5 @@
         </footer>
     </main>  
     <div class="background"></div>
-    <div class="image1"></div>
 </body>
 </html>
