retirer la validation sur cartes confirmation

--- a/restaurants/confirmation.html
+++ b/restaurants/confirmation.html
@@ -22,38 +22,36 @@
             <h1 class="confirmWrapper__title--titre">Confirmation</h1>
         </div>
         <div class="confirmWrapper__box">
-            <h3 class="confirmWrapper__box--title">Entrées<span class="confirmWrapper__box--borderLeft"></span></h3>
+            <h3 class="confirmWrapper__box--title">Vos choix<span class="confirmWrapper__box--borderLeft"></span></h3>
             <article class="menuCard even1s">
                 <div class="menuCard__box">
                     <div class="menuCard__box--text">
                         <h4>Œuf au plat</h4>
                         <p>Assaisonné à la truffe sur lit de caviar</p>
                     </div>
-                    <div class="menuCard__box--price">20€</div>
+                    <div class="menuCard__box--prix">20€</div>
                 </div>
             </article>
         </div>
         <div class="confirmWrapper__box">
-            <h3 class="confirmWrapper__box--title">Plats<span class="confirmWrapper__box--borderLeft"></span></h3>
             <article class="menuCard even2s">
                 <div class="menuCard__box">
                     <div class="menuCard__box--text">
                         <h4>Pigeonneau d’Ille-et-Vilaine</h4>
                         <p>Sur son lit de gnocchis aux légumes</p>
                     </div>
-                    <div class="menuCard__box--price">44€</div>
+                    <div class="menuCard__box--prix">44€</div>
                 </div>
             </article>                 
         </div>
         <div class="confirmWrapper__box">
-            <h3 class="confirmWrapper__box--title">Desserts<span class="confirmWrapper__box--borderLeft"></span></h3>
             <article class="menuCard even3s">
                 <div class="menuCard__box">
                     <div class="menuCard__box--text">
                         <h4>Tiramisu</h4>
                         <p>À la noisette</p>
                     </div>
-                    <div class="menuCard__box--price">23€</div>
+                    <div class="menuCard__box--prix">23€</div>
                 </div>
             </article>
         </div>
@@ -62,9 +60,9 @@
             <article class="menuCard even4s">
                 <div class="menuCard__box">
                     <div class="menuCard__box--text">
-                        <h4>Totale</h4>
+                        <h4>Total</h4>
                     </div>
-                    <div class="menuCard__box--price">87€</div>
+                    <div class="menuCard__box--prix">87€</div>
                 </div>
             </article>
         </div>
