ajout icone dans menu tab

--- a/restaurants/confirmation.html
+++ b/restaurants/confirmation.html
@@ -12,10 +12,11 @@
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="../assets/css/main.css">
+    <link rel="icon" href="../assets/images/icon/fork-knife.svg">
 </head>
 <body class="confirmation-logo confimage">
 
-        <!--***** Le Menu *****-->
+        <!--***** La Confirmation *****-->
 
     <main class="confirmWrapper">
         <div class="confirmWrapper__title">
@@ -66,7 +67,13 @@
                 </div>
             </article>
         </div>
+
+            <!--***** Le Bouton Commander *****-->
+
         <a class="btn__commander" href="../index.html">Retour</a>
+
+            <!--***** Le Footer *****-->
+
         <footer class="footer">
             <div class="grid">
                 <h4 class="footer__title">ohmyfood</h4>
